--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -30,7 +30,7 @@ set(Boost_USE_RELEASE_LIBS       ON)  # only find release libs
 set(Boost_USE_MULTITHREADED      ON)
 set(Boost_USE_STATIC_RUNTIME    OFF)
 # Note boost 1.75.0 error
-find_package(Boost 1.74.0 REQUIRED COMPONENTS date_time regex thread filesystem context coroutine)
+find_package(Boost 1.74.0 REQUIRED COMPONENTS date_time regex thread filesystem context coroutine serialization)
 if(NOT Boost_FOUND)
 	message(FATAL_ERROR "Not found Boost version 1.74.0")
 endif()
@@ -71,9 +71,9 @@ endif()
 ## SG library
 set(SGLIB_INCLUDEDIR "${GSL_INCLUDEDIR};${FMT_INCLUDEDIR};${LIBZMQ_INCLUDEDIR};${CPPZMQ_INCLUDEDIR};${VLD_INCLUDEDIR};${Boost_INCLUDE_DIRS};${DATE_INCLUDEDIR};${ZMQPP_INCLUDEDIR}")
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-	set(SGLIB_LIBRARIES "${FMT_LIBDIR}/fmtd.lib;${LIBZMQ_DIR}/libzmq-staticd.lib;${VLD_LIBDIR}/vld.lib;${ZMQPP_LIBDIR}/zmqpp-staticd.lib")
+	set(SGLIB_LIBRARIES "${Boost_LIBRARIES};${FMT_LIBDIR}/fmtd.lib;${LIBZMQ_DIR}/libzmq-staticd.lib;${VLD_LIBDIR}/vld.lib;${ZMQPP_LIBDIR}/zmqpp-staticd.lib")
 else()
-	set(SGLIB_LIBRARIES "${FMT_LIBDIR}/fmt.lib;${LIBZMQ_DIR}/libzmq-static.lib;${VLD_LIBDIR}/vld.lib;${ZMQPP_LIBDIR}/zmqpp-static.lib")
+	set(SGLIB_LIBRARIES "${Boost_LIBRARIES};${FMT_LIBDIR}/fmt.lib;${LIBZMQ_DIR}/libzmq-static.lib;${VLD_LIBDIR}/vld.lib;${ZMQPP_LIBDIR}/zmqpp-static.lib")
 endif()
 message(STATUS "SGLIB_INCLUDEDIR: ${SGLIB_INCLUDEDIR}")
 message(STATUS "SGLIB_LIBRARIES: ${SGLIB_LIBRARIES}")
