--- a/zeromq/5-Advanced Pub-Sub Patterns/5.4-Reliable Pub-Sub (Clone Pattern)/CMakeLists.txt
+++ b/zeromq/5-Advanced Pub-Sub Patterns/5.4-Reliable Pub-Sub (Clone Pattern)/CMakeLists.txt
@@ -43,6 +43,11 @@ target_include_directories(clonecli4 PRIVATE ${SGLIB_INCLUDEDIR})
 target_link_libraries(clonecli4 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 
 ## Ephemeral Values
+# client
 add_executable(clonecli5 "clonecli5.cpp" "kvmsg.hpp")
 target_include_directories(clonecli5 PRIVATE ${SGLIB_INCLUDEDIR})
 target_link_libraries(clonecli5 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
+# server
+add_executable(clonesrv5 "clonesrv5.cpp" "kvmsg.hpp")
+target_include_directories(clonesrv5 PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(clonesrv5 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
