--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -106,3 +106,5 @@ add_subdirectory("5-Advanced Pub-Sub Patterns/5.1-Pub-Sub Tracing (Espresso Patt
 add_subdirectory("5-Advanced Pub-Sub Patterns/5.2-Last Value Caching")
 add_subdirectory("5-Advanced Pub-Sub Patterns/5.3-Slow Subscriber Detection (Suicidal Snail Pattern)")
 add_subdirectory("5-Advanced Pub-Sub Patterns/5.4-Reliable Pub-Sub (Clone Pattern)")
+#
+add_subdirectory("7-Advanced Architecture using ZeroMQ/7.1-transferring file")
